unpackaged/main/default/objects/Field_Mapping__c/fields/Agent_Display__c.field-meta.xml
<CustomField>
    <fullName>Agent_Display__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agent Display</label>
    <type>Checkbox</type>
</CustomField>