unpackaged/main/default/objects/Field_Mapping__c/fields/filter_query__c.field-meta.xml
<CustomField>
    <fullName>filter_query__c</fullName>
    <label>filter query</label>
    <length>255</length>
    <type>Text</type>
</CustomField>