unpackaged/main/default/objects/Field_Mapping__c/fields/from__c.field-meta.xml
<CustomField>
    <fullName>from__c</fullName>
    <label>From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>