unpackaged/main/default/objects/Field_Mapping__c/fields/Instance_Name__c.field-meta.xml
<CustomField>
    <fullName>Instance_Name__c</fullName>
    <label>Instance Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PG</fullName>
            </value>
            <value>
                <fullName>iPP</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>