unpackaged/main/default/objects/Field_Mapping__c/fields/LookUp_label__c.field-meta.xml
<CustomField>
    <fullName>LookUp_label__c</fullName>
    <label>LookUp label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>