unpackaged/main/default/objects/Field_Mapping__c/fields/Only_for_creation__c.field-meta.xml
<CustomField>
    <fullName>Only_for_creation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this field is used to map at a time of creation only</description>
    <label>include for creation mapping</label>
    <type>Checkbox</type>
</CustomField>