unpackaged/main/default/objects/Field_Mapping__c/fields/Picklist_values__c.field-meta.xml
<CustomField>
    <fullName>Picklist_values__c</fullName>
    <label>Picklist values</label>
    <length>255</length>
    <type>Text</type>
</CustomField>