unpackaged/main/default/objects/Field_Mapping__c/fields/recordCreation__c.field-meta.xml
<CustomField>
    <fullName>recordCreation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>recordCreation</label>
    <type>Checkbox</type>
</CustomField>