unpackaged/main/default/objects/Field_Mapping__c/fields/Related_List_Label__c.field-meta.xml
<CustomField>
    <fullName>Related_List_Label__c</fullName>
    <label>Related List Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>