unpackaged/main/default/objects/Field_Mapping__c/fields/related_Object_API__c.field-meta.xml
<CustomField>
    <fullName>related_Object_API__c</fullName>
    <label>Related Object API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>