unpackaged/main/default/objects/Field_Mapping__c/fields/Search_Data__c.field-meta.xml
<CustomField>
    <fullName>Search_Data__c</fullName>
    <label>Search Data</label>
    <referenceTo>Search_and_tag_admin__c</referenceTo>
    <relationshipLabel>Field Mappings</relationshipLabel>
    <relationshipName>Field_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>