unpackaged/main/default/objects/Field_Mapping__c/fields/Search_List__c.field-meta.xml
<CustomField>
    <fullName>Search_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>include in display list</label>
    <type>Checkbox</type>
</CustomField>