unpackaged/main/default/objects/Field_Mapping__c/fields/Sequennce__c.field-meta.xml
<CustomField>
    <fullName>Sequennce__c</fullName>
    <label>Sequennce</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>