unpackaged/main/default/objects/Field_Mapping__c/fields/where_clause__c.field-meta.xml
<CustomField>
    <fullName>where_clause__c</fullName>
    <defaultValue>false</defaultValue>
    <label>include in where clause</label>
    <type>Checkbox</type>
</CustomField>